--- a/android/workload/app/src/main/res/menu/menu_main.xml
+++ b/android/workload/app/src/main/res/menu/menu_main.xml
@@ -1,30 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".calendar">
-    <item
-        android:id="@+id/action_manage_lectures"
-        android:title="@string/action_manage_lectures"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_my_statistics"
-        android:title="@string/action_my_statistics"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_privacy_agreement"
-        android:title="@string/action_privacy_agreement"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_logout"
-        android:title="@string/action_logout"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
+    tools:context="com.gmail.konstantin.schubert.workload.SelectLecture">
+    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
