now showing only lectures of the concerned week in the selectLecture activity. But not sure if it is actually workig, because all my lectures are always shown. Might just be because I inizialized them all for the same timeframe, though...

--- a/android/workload/app/src/main/res/layout/week_button.xml
+++ b/android/workload/app/src/main/res/layout/week_button.xml
@@ -4,5 +4,5 @@
     android:layout_width="@dimen/week_button_size"
     android:layout_height="@dimen/week_button_size"
     android:id="@+id/week_button"
-    android:backgroundTint="@color/primary_bright"
+    android:backgroundTint="@color/primary_brightish"
     android:minHeight="@dimen/week_button_size"/>
