--- a/android/workload/app/src/main/res/values/colors.xml
+++ b/android/workload/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="primary" type="color">#8B94B1</color>
     <color name="primary_dark" type="color">#2F4067</color>
     <color name="primary_bright" type="color">#D8DADD</color>
+    <color name="primary_brightish" type="color">#cacdd1</color>
     <color name="accent" type="color">#FFFFFF</color>
 
 </resources>
