--- a/android/workload/app/src/main/res/layout/activity_select_lecture.xml
+++ b/android/workload/app/src/main/res/layout/activity_select_lecture.xml
@@ -9,6 +9,8 @@
     <ListView android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:divider="@null"
+        android:dividerHeight="0dp"
     />
 
     <TextView android:id="@android:id/empty"
