--- a/android/workload/app/src/main/res/xml/authenticator.xml
+++ b/android/workload/app/src/main/res/xml/authenticator.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <account-authenticator
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:accountType="survey.zqa.tu-dresden.de"
+    android:accountType="de.tu-dresden.zqa.survey"
     android:icon="@mipmap/shibboleth_icon"
     android:label="@string/shibboleth_authenticator"/>
