--- a/android/workload/app/src/main/res/layout/activity_active_lectures.xml
+++ b/android/workload/app/src/main/res/layout/activity_active_lectures.xml
@@ -3,19 +3,15 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp">
+    android:padding="0dp">
 
     <ListView android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@null"
-        android:dividerHeight="0dp"
-    />
+        android:divider="@color/primary_brightish"
+        android:dividerHeight="1px"
+        android:drawSelectorOnTop="false" />
 
-    <TextView android:id="@android:id/empty"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="No lectures in this week.."/>
+
 </LinearLayout>
  
