working on the design

--- a/android/workload/app/src/main/res/layout/add_lecture_row.xml
+++ b/android/workload/app/src/main/res/layout/add_lecture_row.xml
@@ -14,4 +14,13 @@
         android:layout_centerHorizontal="true"
         android:gravity="center_vertical|center_horizontal" />
 
+    <Switch
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_margin="20dp"
+        android:id="@+id/add_lecture_select_switch"
+        android:layout_alignParentRight="true"
+        />
+
+
 </RelativeLayout>
