--- a/android/workload/app/src/main/res/layout/activity_add_lecture.xml
+++ b/android/workload/app/src/main/res/layout/activity_add_lecture.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <!--TODO: add search-->
 
     <ListView android:id="@android:id/list"
         android:layout_width="match_parent"
@@ -19,5 +21,5 @@
 
 
 
-</LinearLayout>
+</RelativeLayout>
  
