--- a/android/workload/app/src/main/res/layout/semester_row.xml
+++ b/android/workload/app/src/main/res/layout/semester_row.xml
@@ -6,10 +6,11 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Semester Name"
+        android:text="This a semester Name"
+        android:layout_toLeftOf="@+id/semester_select_button"
         android:id="@+id/semester_name_text_view"
         android:layout_centerHorizontal="true"
         android:gravity="center_vertical|center_horizontal" />
@@ -18,7 +19,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_margin="20dp"
-        android:id="@+id/semester_select_button"
+        android:id="@id/semester_select_button"
         android:layout_alignParentRight="true"
         android:src="@drawable/arrow_right" />
 
