--- a/android/workload/app/src/main/res/layout/week_button.xml
+++ b/android/workload/app/src/main/res/layout/week_button.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.gmail.konstantin.schubert.workload.WeekButton
+<Button
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/week_button_size"
     android:layout_height="@dimen/week_button_size"
