--- a/android/workload/app/src/main/res/layout/activity_calendar.xml
+++ b/android/workload/app/src/main/res/layout/activity_calendar.xml
@@ -1,17 +1,53 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".calendar">
 
-    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="70dp">
+
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="20dp"
+            android:id="@+id/previous_semester_button"
+            android:layout_alignParentLeft="true"
+            android:src="@drawable/arrow_left" />
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="WS 9999"
+            android:id="@+id/calendar_semester"
+            android:layout_centerHorizontal="true"
+            android:layout_toLeftOf="@+id/next_semester_button"
+            android:layout_toRightOf="@+id/previous_semester_button"
+            android:gravity="center_vertical|center_horizontal"
+             />
+
+
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="20dp"
+            android:id="@+id/next_semester_button"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/arrow_right" />
+
+    </RelativeLayout>
+
+    <GridView
         android:id="@+id/gridview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:columnWidth="@dimen/week_button_size"
         android:numColumns="auto_fit"
         android:stretchMode="spacingWidthUniform"
@@ -19,7 +55,7 @@
         />
 
 
-</RelativeLayout>
+</LinearLayout>
 
 
 
