--- a/android/workload/app/src/main/res/layout/week_button.xml
+++ b/android/workload/app/src/main/res/layout/week_button.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Button
+<TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/week_button_size"
     android:layout_height="@dimen/week_button_size"
     android:id="@+id/week_button"
+    android:textColor="@color/text_primary"
     android:minHeight="@dimen/week_button_size"/>
-
-<!--I should probably just use a different item instead of a button if I want to get the same look as in the lists.-->
-<!--In fact, I want the grid elements to equally stretch until a certain size, before increasing the amount of elements in the row by one.-->
