--- a/android/workload/app/src/main/res/layout/activity_calendar.xml
+++ b/android/workload/app/src/main/res/layout/activity_calendar.xml
@@ -44,15 +44,17 @@
 
     </RelativeLayout>
 
-    <GridView
-        android:id="@+id/gridview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:columnWidth="@dimen/week_button_size"
-        android:numColumns="auto_fit"
-        android:stretchMode="spacingWidthUniform"
-        android:gravity="center"
-        />
+
+        <GridView
+            android:id="@+id/gridview"
+            android:layout_centerInParent="true"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:columnWidth="@dimen/week_button_size"
+            android:numColumns="auto_fit"
+            android:stretchMode="columnWidth"
+            android:gravity="center"
+            />
 
 
 </LinearLayout>
