--- a/android/workload/app/src/main/res/layout/week_button.xml
+++ b/android/workload/app/src/main/res/layout/week_button.xml
@@ -5,5 +5,6 @@
     android:layout_height="@dimen/week_button_size"
     android:id="@+id/week_button"
     android:textColor="@color/text_primary"
+    android:background="@color/window_background"
     android:gravity="center"
     android:text="text not found" />
