--- a/android/workload/app/src/main/res/layout/activity_calendar.xml
+++ b/android/workload/app/src/main/res/layout/activity_calendar.xml
@@ -12,9 +12,9 @@
 
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="20dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:padding="20dp"
             android:id="@+id/previous_semester_button"
             android:layout_alignParentLeft="true"
             android:src="@drawable/arrow_left" />
@@ -36,9 +36,9 @@
 
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_margin="20dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:padding="20dp"
             android:id="@+id/next_semester_button"
             android:layout_alignParentRight="true"
             android:src="@drawable/arrow_right" />
