--- a/android/workload/app/src/main/res/layout/add_lecture_row.xml
+++ b/android/workload/app/src/main/res/layout/add_lecture_row.xml
@@ -17,8 +17,8 @@
 
     <Switch
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_margin="20dp"
+        android:layout_height="70dp"
+        android:padding="20dp"
         android:id="@id/add_lecture_select_switch"
         android:layout_alignParentRight="true"
         />
