--- a/android/workload/app/src/main/res/layout/semester_row.xml
+++ b/android/workload/app/src/main/res/layout/semester_row.xml
@@ -16,9 +16,9 @@
         android:gravity="center_vertical|center_horizontal" />
 
     <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_margin="20dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:padding="20dp"
         android:id="@id/semester_select_button"
         android:layout_alignParentRight="true"
         android:src="@drawable/arrow_right" />
