--- a/android/workload/app/src/main/res/layout/activity_calendar.xml
+++ b/android/workload/app/src/main/res/layout/activity_calendar.xml
@@ -8,7 +8,8 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:background="@color/primary_bright">
+        android:background="@color/primary_bright"
+        android:id="@+id/calendar_semester_selector">
 
 
         <ImageView
