finished styling of privacy agreement page

--- a/android/workload/app/src/main/res/layout/activity_privacy_agreement.xml
+++ b/android/workload/app/src/main/res/layout/activity_privacy_agreement.xml
@@ -31,7 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_margin="8dp">
+        android:padding="8dp"
+        android:background="@color/primary">
 
         <CheckBox
             android:layout_width="wrap_content"
@@ -45,13 +46,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:gravity="right">
+            android:gravity="right"
+            >
             <Button
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Decline"
                 android:id="@+id/privacy_decline_button" />
             <Button
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Agree"
