--- a/android/workload/app/src/main/res/layout/activity_privacy_agreement.xml
+++ b/android/workload/app/src/main/res/layout/activity_privacy_agreement.xml
@@ -32,13 +32,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:padding="8dp"
-        android:background="@color/primary">
+        android:background="@color/primary"
+        android:id="@+id/privacy_agree_footer">
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ich stimme zu"
-            android:id="@+id/checkBox"
+            android:id="@+id/privacy_checkBox"
             android:layout_weight="0.21" />
 
         <LinearLayout
@@ -48,12 +49,6 @@
             android:layout_gravity="center_horizontal"
             android:gravity="right"
             >
-            <Button
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Decline"
-                android:id="@+id/privacy_decline_button" />
             <Button
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
