--- a/android/workload/app/src/main/res/layout/workload_row.xml
+++ b/android/workload/app/src/main/res/layout/workload_row.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-android:orientation="horizontal"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_gravity="center_horizontal">
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="70dp"
+    android:gravity="center_vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    >
 
-<TextView
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_weight="0.7"
-    android:textAppearance="?android:attr/textAppearanceMedium"
-     />
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.7"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+         />
 
-<EditText
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:inputType="numberDecimal"
-    android:ems="10"
-    android:layout_weight="0.3" />
+    <EditText
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
+        android:ems="10"
+        android:layout_weight="0.3" />
 
 </LinearLayout>
