--- a/android/workload/app/src/main/res/values/styles.xml
+++ b/android/workload/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <resources>
-
+    <!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
     <style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">
         <!-- Main theme colors -->
         <!--   your app branding color for the app bar -->
