--- a/android/workload/app/src/main/res/values/styles.xml
+++ b/android/workload/app/src/main/res/values/styles.xml
@@ -1,16 +1,12 @@
 <resources>
-    <!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
-    <style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">
-        <!-- Main theme colors -->
-        <!--   your app branding color for the app bar -->
-        <item name="android:colorPrimary">@color/primary</item>
-        <!--   darker variant for the status bar and contextual app bars -->
-        <item name="android:colorPrimaryDark">@color/primary_dark</item>
-        <!--   theme UI controls like checkboxes and text fields -->
-        <item name="android:colorAccent">@color/accent</item>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
 
-        <item name="android:textColorPrimary">@color/text_primary</item>
-        <item name="android:colorButtonNormal">@color/primary</item>
+
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+<!--        <item name="colorButtonNormal">@color/primary</item>
+        <item name="textColorPrimary">@color/text_primary</item>-->
 
     </style>
 
