--- a/android/workload/app/src/main/res/layout/activity_calendar.xml
+++ b/android/workload/app/src/main/res/layout/activity_calendar.xml
@@ -91,6 +91,27 @@
     </LinearLayout>
 
 
+    <!-- empty view -->
+    <LinearLayout
+        android:id="@+id/initial_sync_view"
+        android:visibility="gone"
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_gravity="center"
+        android:gravity="center_horizontal"
+        android:layout_height="fill_parent">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Performing an initial sync. Stand by."
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:padding="20dp"
+            android:textColor="@color/primary_brightish"
+            />
+
+    </LinearLayout>
+
+
 </LinearLayout>
 
 
