--- a/android/workload/app/src/main/res/layout/activity_calendar.xml
+++ b/android/workload/app/src/main/res/layout/activity_calendar.xml
@@ -83,7 +83,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Add lectures"
-            android:padding="20dp"
+            android:padding="10dp"
             android:background="@color/primary_brightish"
             android:textColor="@color/window_background"
             android:onClick="onClickManageLectures"
@@ -91,23 +91,29 @@
     </LinearLayout>
 
 
-    <!-- empty view -->
+    <!-- empty view during initial sync-->
     <LinearLayout
         android:id="@+id/initial_sync_view"
         android:visibility="gone"
         android:orientation="vertical"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:layout_height="fill_parent">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Performing an initial sync. Stand by."
+            android:text="Getting lectures"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:padding="20dp"
             android:textColor="@color/primary_brightish"
             />
+        <ProgressBar
+            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_marginTop="24dp"
+            android:indeterminate="true" />
 
     </LinearLayout>
 
