--- a/android/workload/app/src/main/res/layout/activity_calendar.xml
+++ b/android/workload/app/src/main/res/layout/activity_calendar.xml
@@ -68,24 +68,24 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_gravity="center"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:layout_height="fill_parent">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="No lectures selected for this semester"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:padding="20dp"
-            android:textColor="@color/primary_brightish"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/text_primary"
+            android:layout_marginBottom="10dp"
         />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textAppearance="?android:attr/textAppearanceButton"
             android:text="Add lectures"
             android:padding="10dp"
             android:background="@color/primary_brightish"
-            android:textColor="@color/window_background"
+            android:textColor="@color/text_primary"
             android:onClick="onClickManageLectures"
             />
     </LinearLayout>
@@ -105,8 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Getting lectures"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/primary_brightish"
+            android:textColor="@color/text_primary"
             />
         <ProgressBar
             style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
