--- a/android/workload/app/src/main/res/layout/semester_row.xml
+++ b/android/workload/app/src/main/res/layout/semester_row.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp">
+    android:layout_height="70dp"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp">
 
 
 
@@ -12,8 +14,7 @@
         android:text="This a semester Name"
         android:layout_toLeftOf="@+id/semester_select_button"
         android:id="@+id/semester_name_text_view"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_vertical|center_horizontal" />
+        android:gravity="center_vertical" />
 
     <ImageView
         android:layout_width="70dp"
