--- a/android/workload/app/src/main/res/layout/activity_add_lecture.xml
+++ b/android/workload/app/src/main/res/layout/activity_add_lecture.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@color/primary_brightish"
-        android:dividerHeight="1px"/>
+        android:dividerHeight="1px"
+        android:drawSelectorOnTop="true"/>
 
 
 
