--- a/android/workload/app/src/main/res/layout/lecture_row_modern.xml
+++ b/android/workload/app/src/main/res/layout/lecture_row_modern.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp">
+    android:layout_height="70dp"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp">
 
 
 
@@ -11,7 +13,6 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Lecture Name"
         android:id="@+id/add_lecture_name_text_view"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_vertical|center_horizontal" />
+        android:gravity="center_vertical" />
 
 </RelativeLayout>
