--- a/android/workload/app/src/main/res/menu/menu_main.xml
+++ b/android/workload/app/src/main/res/menu/menu_main.xml
@@ -20,4 +20,9 @@
         android:title="@string/action_privacy_agreement"
         android:orderInCategory="100"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/about"
+        android:title="@string/action_about"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 </menu>
