--- a/android/workload/app/src/main/res/layout/activity_statistics.xml
+++ b/android/workload/app/src/main/res/layout/activity_statistics.xml
@@ -8,4 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <!--<com.github.mikephil.charting.charts.PieChart-->
+        <!--android:id="@+id/pie_chart_time_per_activity"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />-->
+
 </LinearLayout>
