--- a/android/workload/app/src/main/res/layout/workload_row.xml
+++ b/android/workload/app/src/main/res/layout/workload_row.xml
@@ -21,6 +21,14 @@
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
         android:ems="10"
-        android:layout_weight="0.3" />
+        android:layout_weight="0.2" />
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.1"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="h"
+        />
 
 </LinearLayout>
