WIP, completely untested. fixing delete button size and the fact that the last item before was covered by the floating action button. Both needs to be tested.

--- a/android/workload/app/src/main/res/layout/activity_active_lectures.xml
+++ b/android/workload/app/src/main/res/layout/activity_active_lectures.xml
@@ -10,8 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@color/primary_brightish"
-        android:dividerHeight="1px"/>
-        <!--android:drawSelectorOnTop="false" />-->
+        android:dividerHeight="1px"
+        android:paddingBottom="88dp"
+        android:clipToPadding="false"/>
+        <!-- create padding below list so that the
+        floating action button does not cover the last list item-->
+
 
 
 
