--- a/android/workload/app/src/main/res/layout/lecture_row_modern_trashcan.xml
+++ b/android/workload/app/src/main/res/layout/lecture_row_modern_trashcan.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp">
+    android:layout_height="70dp">
 
 
 
     <TextView
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -19,14 +19,25 @@
 
 
 
-    <ImageButton
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_margin="20dp"
+        android:layout_height="fill_parent"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:id="@id/delete_lecture_button"
         android:layout_alignParentRight="true"
-        android:background="@drawable/ic_delete_black_24dp"
-        />
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:scaleType="center"
+            android:src="@drawable/ic_delete_black_24dp" />
+
+
+
+    </LinearLayout>
 
 
 
